User,Role Modals and AbstractDao

--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,13 @@
             <version>10.1.7</version>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20220924</version>
+        </dependency>
+
     </dependencies>
 
 </project>
