--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,11 @@
             <artifactId>json</artifactId>
             <version>20220924</version>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.1</version>
+        </dependency>
 
     </dependencies>
 
