--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<web-app id="hello-world-webapp"
+<web-app id="damacanan"
 		 version="5.0"
 		 xmlns="https://jakarta.ee/xml/ns/jakartaee"
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
