--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 	<description>Homework</description>
 
 	<welcome-file-list>
-		<welcome-file>/jsp/add-post.jsp</welcome-file>
+		<welcome-file>/jsp/Add_Category.jsp</welcome-file>
 	</welcome-file-list>
 
 	<servlet>
@@ -21,6 +21,16 @@
 	<servlet-mapping>
 		<servlet-name>PostServlet</servlet-name>
 		<url-pattern>/post/*</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>CategoryServlet</servlet-name>
+		<servlet-class>servlet.CategoryServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>CategoryServlet</servlet-name>
+		<url-pattern>/category/*</url-pattern>
 	</servlet-mapping>
 
 </web-app>
