--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,4 +33,14 @@
 		<url-pattern>/category/*</url-pattern>
 	</servlet-mapping>
 
+	<servlet>
+		<servlet-name>ReviewServlet</servlet-name>
+		<servlet-class>servlet.ReviewServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>ReviewServlet</servlet-name>
+		<url-pattern>/review/*</url-pattern>
+	</servlet-mapping>
+
 </web-app>
