--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -42,5 +42,14 @@
 		<servlet-name>ReviewServlet</servlet-name>
 		<url-pattern>/review/*</url-pattern>
 	</servlet-mapping>
+	<servlet>
+		<servlet-name>FavouritesServlet</servlet-name>
+		<servlet-class>servlet.FavouritesServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>FavouritesServlet</servlet-name>
+		<url-pattern>/favourite/*</url-pattern>
+	</servlet-mapping>
 
 </web-app>
