--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,6 +32,16 @@
 		<servlet-name>CategoryServlet</servlet-name>
 		<url-pattern>/category/*</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>SubCategoryServlet</servlet-name>
+		<servlet-class>servlet.SubCategoryServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>SubCategoryServlet</servlet-name>
+		<url-pattern>/subcategory/*</url-pattern>
+	</servlet-mapping>
 
 	<servlet>
 		<servlet-name>ReviewServlet</servlet-name>
