--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -63,4 +63,26 @@
 		<url-pattern>/review/*</url-pattern>
 	</servlet-mapping>
 
+	<servlet>
+		<servlet-name>UserServlet</servlet-name>
+		<servlet-class>servlet.UserServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>UserServlet</servlet-name>
+		<url-pattern>/user/*</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>PermissionServlet</servlet-name>
+		<servlet-class>servlet.PermissionServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>PermissionServlet</servlet-name>
+		<url-pattern>/permission/*</url-pattern>
+	</servlet-mapping>
+
+
+
 </web-app>
